# local_code

./: .gitignore  CMakeLists.txt  README.md  hello.c  install.sh  plan.md
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  conversation.cpp  conversation.hpp  diff.hpp  gpu_monitor.cpp  gpu_monitor.hpp  io.hpp  main.cpp  message.hpp  ollama_client.cpp  ollama_client.hpp  permissions.cpp  permissions.hpp  plain_console.cpp  plain_console.hpp  project.cpp  project.hpp  stream_filter.hpp  system_prompt.hpp  tools.cpp  tools.hpp  tui.cpp  tui.hpp  undo.cpp  undo.hpp  web_search.cpp  web_search.hpp
tests/: test_conversation.cpp  test_features.cpp  test_filter.cpp  test_native.cpp  test_parse.cpp  test_web.cpp
